# cli-agent-gateway

./: .cli_agent_gatewayd.json  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  package-lock.json  pyproject.toml  run.py  start.sh
adapters/: imsg_fetch.sh  imsg_notify.sh  imsg_send.sh
docs/: ARCHITECTURE.md  CLI_SPEC.md  DINGTALK_PLAN.md  DINGTALK_SETUP.md  GO_BACKEND_ARCHITECTURE.md  GUI_CLI_FLOW.md  IMESSAGE_SETUP.md  NEW_USER_ONBOARDING.md  ROADMAP.md
docs/screenshots/: README.md
macos/CLIApp/Sources/: main.swift
macos/CLIApp/scripts/: build_macos_gui_app.sh
scripts/: autoconfig_imessage.sh  create_macos_launcher.sh  macos_gui_closed_loop_test.sh  macos_gui_launch_and_capture.sh
scripts/testing/: mock_acp_agent.py  mock_fetch.py  mock_send.py
src/: go.mod  go.sum
src/agents/: acp_stdio_agent.py  base.py
src/app/: local_chat.py  main.py
src/channels/: base.py  command_channel.py  dingtalk.py  dingtalk_callback_server.py  dingtalk_fetch.py  dingtalk_send.py  dingtalk_stream_channel.py  imessage.py  imessage_fetch.py  imessage_send.py
src/cli_agent_gateway/agents/: acp_stdio_agent.py  base.py
src/cli_agent_gateway/app/: main.py
src/cli_agent_gateway/channels/: base.py  command_channel.py  dingtalk_callback_server.py  dingtalk_fetch.py  dingtalk_send.py  imessage_fetch.py  imessage_send.py
src/cli_agent_gateway/core/: contracts.py  loop.py
src/cli_agent_gateway/infra/: config.py  interaction_log.py  jsonrpc_stdio.py  process_lock.py  setup_wizard.py  state_store.py
src/cli_agent_gateway/services/: summarizer.py
src/cmd/gateway-cli/: contract_integration_test.go  contract_test.go  grpc_control.go  main.go  process_unix.go  process_windows.go  session_ops.go
src/core/: contracts.py  loop.py  router.py
src/infra/: config.py  interaction_log.py  jsonrpc_stdio.py  setup_wizard.py  state_store.py
src/internal/config/: config.go  setup.go
src/internal/core/: loop.go  types.go
src/internal/storage/: factory.go  storage.go
src/services/: summarizer.py
(+17 files in other folders)
