[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-agent-gateway"
version = "0.1.0"
description = "Lightweight bridge driver between chat channels and AI CLI tools."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cli-agent-gateway = "app.main:main"
imessage-fetch = "channels.imessage_fetch:main"
imessage-send = "channels.imessage_send:main"
dingtalk-fetch = "channels.dingtalk_fetch:main"
dingtalk-send = "channels.dingtalk_send:main"
dingtalk-callback-server = "channels.dingtalk_callback_server:main"
