[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-agent-gateway"
version = "0.1.0"
description = "Lightweight bridge driver between chat channels and AI CLI tools."
requires-python = ">=3.9"
dependencies = ["dingtalk-stream"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cli-agent-gateway = "app.main:main"
imessage-fetch = "channels.imessage:fetch_main"
imessage-send = "channels.imessage:send_main"
dingtalk-fetch = "channels.dingtalk:fetch_main"
dingtalk-send = "channels.dingtalk:send_main"
dingtalk-callback-server = "channels.dingtalk:callback_server_main"
